<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="vn.edu.usth.wordpress25.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="vn.edu.usth.wordpress25.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="vn.edu.usth.wordpress25.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_me"
        android:name="vn.edu.usth.wordpress25.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" >
        <action
            android:id="@+id/action_navigation_me_to_myprofil2"
            app:destination="@id/myprofil2" />
        <action
            android:id="@+id/action_navigation_me_to_accountsettings"
            app:destination="@id/accountsettings" />
    </fragment>
    <fragment
        android:id="@+id/myprofil2"
        android:name="vn.edu.usth.wordpress25.myprofil"
        android:label="My profil"
        tools:layout="@layout/fragment_myprofil" />
    <fragment
        android:id="@+id/accountsettings"
        android:name="vn.edu.usth.wordpress25.Account_settings"
        android:label="Account settings"
        tools:layout="@layout/fragment_account_settings" />
</navigation>